# campus-stuff

./: README.md  Readme.md  bash_profile  bashrc  index.html  params.json  postinstall.sh  rc.local  vim-tutor  vimrc-new
AMOXP/: Makefile  append.m  argparse.m  basics.m  bitmask.m  blorf  buffread.m  cheapls.m  conditional-compilation.m  datasource.m  debuglog-macro.m  debuglog.m  defargs.m  describeObjects.m  dumpargs.m  dumpem.m  expansion.m  fbinaryio.m  filerefurl.m  foldersize.m  keventwatch.d  longjmp.m  mmap-rot13.m  multilineMacro.m  mutex.m  open.m  permtype.m  predef.mm  ptontoa.m  quietlog.m  readme.md  readstring.m  readvecstring.m  resolve.m  searchpath.m  sentinel.m  simpleclient.m  simpleserver.m  sizeprinter.c  stringization.m  (+10 more)
Calculator/: build.xml
Calculator/nbproject/: build-impl.xml  genfiles.properties  project.properties  project.xml
Calculator/nbproject/private/: private.properties  private.xml
Calculator/src/xx/: XXAboutBox.form  XXAboutBox.java  XXApp.java  XXView.form  XXView.java
Calculator/src/xx/resources/: XXApp.properties  XXView.properties
Others/: yunxinyi.p12
Others/os homeworks/: os设计讲稿.doc
Others/os homeworks/0x02/: style.css
Others/os homeworks/0x04/: Makefile  block.h  main.cpp  test.cpp
RouterHelper/: README.md  setup.py  tendactl.py
RouterHelper/RouterHelper/: Tenda.py  __init__.py
Universal/: tomcat.sh
compiler-principles/: AUTHORS  ChangeLog  Makefile  Makefile.am  README  calc.cpp  calc.y  configure.ac
compiler-principles/doc/: grammer.c  grammer.txt  recursive-descent-calc.cpp
compiler-principles/exp/: first  first.c
compiler-principles/include/: codegen.h  common.h  errproc.h  grammer.h  ident.h  lexical.h  microcc.h  midcode.h  parser.h  preproc.h  syntax.h  token.h
compiler-principles/src/: Makefile.am  codegen.cpp  errproc.cpp  ident.cpp  lexical.cpp  main.cpp  microcc.cpp  midcode.cpp  optimize.cpp  parser.cpp  preproc.cpp  sample.mc  semantic.cpp  test.cpp  token.cpp
compiler-principles/tools/: LRParser.py  Makefile.am  main.cpp  product.cpp
encryption/: Makefile  Readme.md  des.c  des.h
git-tutorial/: subversion.original  subversion.zh_CN  subversion.zh_CN.md
land/: 1001.c  1002.c  1003.c  1007.c  1008.c  1035.c  1036.c  1080.c  1095.c  1100.c  1199.c  1202.c  1312.c  Makefile  abc  input  test.c  userInfo.txt
lmp/: README.md  about.php  copyright.txt  edit.php  gethint.php  index.php  login.php  test.php  upload_file.php  welcome.php  wp-config.php
lmp/css/: style.css
lmp/inc/: footer.php  nav.php
lmp/js/: test.js
metasploit-tutor/: Metasploit.html
operation system/disk manager(cpp)/: diskmgt.h
operation system/disk manager(java)/: DiskManager.java
operation system/memory manager/: index.html  license.txt  memory.js
operation system/task manager/: taskManager.py
operation-system/disk-manager-cpp/: Makefile  block.cpp  diskmgt.cpp  test.cpp  utils.h
operation-system/disk-manager-java/: build.xml  diskmanager.md
python/: README.md  README.py  Template  car.py  charming_python_4.txt  state.cpp  statemachine.py  statemachine_test.py  world.py
rdpp/: AUTHORS  ChangeLog  INSTALL  Makefile.am  Makefile.in  README  Readme.md  config.h.in  configure  configure.ac
rdpp/docs/: location_test  map.geojson  result.txt
rdpp/exp/: Makefile.am  NZExcept.h  NZFinder.h  NZLogger.cpp  NZLogger.h  test.cpp
rdpp/libnz/: Makefile.am  NZExcept.h  NZFinder.cpp  NZFinder.h  NZHttpClient.cpp  NZHttpClient.h  NZLogger.cpp  NZLogger.h  NZUtils.cpp  NZUtils.h  test.cpp
rdpp/libnz/c/: ffind.h
rdpp/libnz/exp/: convert.c  define.c  ffind.h  learn.cpp  sockpair.c
rdpp/src/: Makefile  Makefile.am  Makefile.in  NZLogger.cpp  NZLogger.h  RConstant.h  RDPool.cpp  RDPool.h  RExcept.h  RHelper.cpp  RHelper.h  RProcessor.cpp  RProcessor.h  RTest.cpp  RTypes.h  RsidGen.cpp  RsidGen.h  main.cpp
rdpp/src/exp/: ffind.c  ffind.h  nzutils.cpp
rdpp/tools/: Makefile.am  Makefile.in  chart.js  extract.sh  rdextract.in  rdgentest.in  rdreport.in  report.html  report.sh
roadprj/: InRecord.h  Makefile  OutRecord.cpp  OutRecord.h  RConstant.h  RHelper.cpp  RHelper.h  RProcessor.cpp  RProcessor.h  RSIDGen.cpp  RSIDGen.h  RTest.cpp  RTime.cpp  RTime.h  RType.h  RTypes.h  Readme.md  Record.h  RsidGen.h  constant.h  dummy.cpp  dummy.h  ffind.c  ffind.cpp  ffind.h  main.c  main.cpp  process.c  process.h  processor.cpp  processor.h  roadprj.pro  test.cpp  types.h  utils.cpp
roadprj/src/: Makefile  RConstant.h  RHelper.cpp  RHelper.h  RProcessor.cpp  RProcessor.h  RTest.cpp  RTypes.h  RsidGen.h  main.cpp
roadprj/tools/: report.html
simple-proxy/: README.md  index.html  proxy.c  server.py
software-engineering/: Readme.md  agile-development.md
software-engineering/map-module/: 1-3-4.doc  CS201102-彭杨华-珞小君吃饭饭-概要设计.doc  CS201102-彭杨华-珞小君吃饭饭-软件计划.doc  CS201102-彭杨华-珞小君吃饭饭-需求陈述.doc  summ0x01.txt  summ0x02.txt  x.txt  描述信息.txt  数据字典.txt  概述.txt
student-manager/: Makefile  Readme.md  common.c  common.h  database.c  database.d.h  database.h  database.r.h  main.c  new.c  new.h  object.h  person.c  person.h  person.r.h  student.c  student.h  student.r.h  utility.c  utility.h
wireshark_nmap/: wireshark_&_nmap_使用.html  wireshark_&_nmap_使用.md  x.txt
