#AM_CXXFLAGS = -Wall -Werror -std=c++11
AM_CXXFLAGS = -Wall -std=c++11

bin_PROGRAMS = rdpp
noinst_PROGRAMS = test

rdpp_SOURCES = main.cpp \
			   RProcessor.cpp \
			   RHelper.cpp \
			   RDPool.cpp \
			   NZLogger.cpp \
			   RProcessor.h \
			   RHelper.h \
			   RDPool.h \
			   NZLogger.h \
			   RsidGen.h \
			   RTypes.h \
			   RConstant.h

test_SOURCES = RTest.cpp \
			   RHelper.h \
			   RHelper.cpp \
			   RDPool.h \
			   RDPool.cpp \
			   NZLogger.h \
			   NZLogger.cpp \
			   RsidGen.h
